--- a/crop_rotator/templates/base.html
+++ b/crop_rotator/templates/base.html
@@ -44,6 +44,9 @@
           <li class="nav-item active ">
             <a class="nav-link " href="{% url 'home' %}">{{ items.mainpage }}<span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item active">
+            <a class="nav-link " href="{% url 'about' %}">{{ items.about }}</a>
+          </li>
         <li>
         <button class="btn btn-light my-2 my-sm-0 ">
             {% if user.is_authenticated %}
