Dodanie strony About Us

--- a/crop_rotator/templates/base.html
+++ b/crop_rotator/templates/base.html
@@ -34,7 +34,7 @@
 <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="{% url 'home' %}"> <img src="{{ skin.meetaplogo_main.url }}"></a>
+      <a class="navbar-brand" href="{% url 'home' %}"> <img src="{{ skin.rotatorlogo_main.url }}"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
