--- a/crop_rotator/strona/templates/strona/home.html
+++ b/crop_rotator/strona/templates/strona/home.html
@@ -18,7 +18,7 @@
 
 <div class="col-md-3 shdwn">
     <div class="col">
-        <a href="{% url 'plan' plan.id %}"><img class="imgshdw float-left img-fluid" src="{{ skin.blogimagedefault.url }}" /></a>
+        <a href="{% url 'plan' plan.id %}"><img class="imgshdw float-left img-fluid" src="{{ skin.planimagedefault.url }}" /></a>
         <div class="desc ">
             <h4 class="head-news"><a href="{% url 'plan' plan.id %}">{{ plan.title }}</a></h4>
             <p>{{ plan.summary }}</p>
@@ -34,7 +34,7 @@
 <!--- DODATKOWY BLOG -->
   <div class="col-md-3 shdwn extrablog">
       <div class="col">
-           <a href="{% url 'plan' rotation_plans.3.id %}"><img class="imgshdw float-left img-fluid" src="{{ skin.blogimagedefault.url }}" /></a>
+           <a href="{% url 'plan' rotation_plans.3.id %}"><img class="imgshdw float-left img-fluid" src="{{ skin.planimagedefault.url }}" /></a>
           <div class="desc">
               <h4 class="head-news"><a href="{% url 'plan' rotation_plans.3.id %}">{{ rotation_plans.3.title }}</a></h4>
               <p>{{ rotation_plans.3.summary }}</p>
