--- a/crop_rotator/strona/templates/strona/plan.html
+++ b/crop_rotator/strona/templates/strona/plan.html
@@ -19,10 +19,14 @@
             <h1 class="text-center pt-3 ">{{ plan.title }}</h1>
             <h4 class="pt-2">{{ plan.pubdate_short }}</h4>
             <br />
-            
+
             {% if cr_len_warning %}
              <h4>Błąd: Ten płodozmian jest za krótki!</h4>
-             <p>W płodozmianie znajdują się rośliny, które wymagają dłuższego zmianowania. Usuń je lub dodaj więcej roślin.</p>
+             <p>W płodozmianie znajdują się rośliny, które wymagają dłuższego zmianowania:</p>
+             {% for crop in cr_len_warning %}
+              <p><b>{{ crop.name }}</b></p>
+             {% endfor %}
+             <p>Usuń je lub dodaj więcej roślin.</p>
              <br />
             {% endif %}
 
