Bugfix: Teraz lista faktycznie jedzie na okrągło.

--- a/crop_rotator/strona/templates/strona/plan_bak.html
+++ b/crop_rotator/strona/templates/strona/plan_bak.html
@@ -46,20 +46,33 @@
                <p>Do tego onhover z informacją w dwóch językach, że chodzi o nawóz.</p>
               {% endif %}
               <h4>Plon wczesny/główny/ozimy z roku ubiegłego:</h4>
-              {% if step.early_crop %}
               {% for crop in step.early_crop.all %}
-              
-              <p>{{ crop.name }}</p>
 
+              {% for e_tab in efcs.e_tabs %}
+              {% if step.order == e_tab %}
+              {% if crop.id in efcs.e_crops %}
+              <p><b>{{ crop.name }} - POWODUJE KOLIZJĘ!</b><p>
+              {% else %}
+              <p>{{ crop.name }}</p>
+              {% endif %}
+              {% endif %}
+              {% endfor %}
                             <!--Tutaj idą dodatkowe cechy plonu głównego w tym rzeczy typu onhover -->
               {% endfor %}
-              {% endif %}
+
 
               {% if step.late_crop %}
               <h4>Plon ozimy/międzyplon:</h4>
               {% for crop in step.late_crop.all %}
-
+              {% for e_tab in efcs.e_tabs %}
+              {% if step.order == e_tab %}
+              {% if crop.id in efcs.e_crops %}
+              <p><b>{{ crop.name }} - POWODUJE KOLIZJĘ!</b><p>
+              {% else %}
               <p>{{ crop.name }}</p>
+              {% endif %}
+              {% endif %}
+              {% endfor %}
 
                             <!--Tutaj idą dodatkowe cechy plonu głównego w tym rzeczy typu onhover -->
               {% endfor %}
