--- a/crop_rotator/templates/base.html
+++ b/crop_rotator/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     {% block title %}
-     <title>{{ items.headtitle }}</title>
+     <title>{{ items.headtitle }} - {{ items.mainpage }}</title>
     {% endblock %}
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
     <!-- Bootstrap core CSS - możemy sami ładować bootstrap z serwera ale to bardziej obciąży naszego klienta imo -->
