--- a/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
+++ b/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
@@ -1,5 +1,5 @@
 {% load static %}
 
-  <p>{{ crop.name }}</p>
+  <p>{{ crop.name }}
 
 <!--Tutaj idą dodatkowe cechy plonu głównego w tym rzeczy typu onhover -->
