--- a/crop_rotator/strona/templates/strona/plan_parts/plan_step.html
+++ b/crop_rotator/strona/templates/strona/plan_parts/plan_step.html
@@ -6,11 +6,11 @@
     {% deep_list step_no=step.order search_by=crop.id search_pos=1 searched_item=4 as d_list %}
     {% if crop.id == d_list.0.id %}
       {% include 'strona/plan_parts/crop_properties.html' %}
-      <p><b>{{ crop.name }} POWODUJE KOLIZJĘ z {{ d_list.1.name }} w kroku {{ d_list.2 }} ! </b><p>
+      <b> POWODUJE KOLIZJĘ z {{ d_list.1.name }} w kroku {{ d_list.2 }} ! </b></p>
         <!--Powyższe ostrzeżenie dać jako wykrzyknik piktogram z informacją onhover i zmianą formatowania wrapperem -->
     {% else %}
-      {% include 'strona/plan_parts/crop_properties.html' %}
+      {% include 'strona/plan_parts/crop_properties.html' %}</p>
     {% endif %}
 {% else %}
-  {% include 'strona/plan_parts/crop_properties.html' %}
+  {% include 'strona/plan_parts/crop_properties.html' %}</p>
 {% endif %}
