--- a/crop_rotator/strona/templates/strona/plan.html
+++ b/crop_rotator/strona/templates/strona/plan.html
@@ -91,8 +91,12 @@
 {% block scripts %}
 <script>
 $(".show_properties2").click(function(event){
-    var text = $(event.target).text();
-    alert(text);
+    var button_triger = $(event.target);
+    var closest = button_triger.closest("p");
+    var x = $(closest).nextSibling.text();
+    if (closest) {
+      alert(x);
+    }
     /*$("show_properties2").nextSibling.Toggle();*/
  });
  </script>
