--- a/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
+++ b/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
@@ -10,6 +10,16 @@
   {% if synergism %}
     <p>{{ crop.name }} dobrze współgra z {{ synergism.name }}</p>
   {% endif %}
+
+  {% shallow_list step_no=step.order search_by=crop.id from_context=allelopatic_f as allelopaticity_f %}
+  {% if allelopaticity_f %}
+    <p>Konflikt na tle allelopatycznym. {{ crop.name }} szkodzi {{ allelopaticity_f.name }}!</p>
+  {% endif %}
+  {% shallow_list step_no=step.order search_by=crop.id from_context=synergic_f as synergism_f %}
+  {% if synergism_f %}
+    <p>{{ crop.name }} dobrze współgra z {{ synergism_f.name }}</p>
+  {% endif %}
+
   <p><b>{{ crop.name }}  </b><button class="show_properties2" value="2">Info</button><p>
   <div class="hidden_properties">
     <p>Rodzina: {{ crop.family }}</p>
