--- a/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
+++ b/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
@@ -20,16 +20,14 @@
     {% endif %}
   {% endif %}
 
-  {% if allelopatic_f %}
-    {% shallow_list step_no=step.order search_by=crop.id from_context=allelopatic_f as allelopaticity_f %}
-    {% if allelopaticity_f %}
-      <p>Konflikt na tle allelopatycznym. {{ crop.name }} szkodzi {{ allelopaticity_f.name }}!</p>
-    {% endif %}
-  {% endif %}
-  {% if synergic_f %}
-    {% shallow_list step_no=step.order search_by=crop.id from_context=synergic_f as synergism_f %}
-    {% if synergism_f %}
-      <p>{{ crop.name }} dobrze współgra z {{ synergism_f.name }}</p>
+  {% if interactions_f %}
+    {% complex_list step_no=step.order search_by=crop.id subject_type=1 from_context=interactions_f as complexity_f %}
+    {% if complexity_f %}
+      {% if complexity_f.1 %}
+        <p>{{ crop.name }} dobrze współgra z {{ complexity_f.0.name }} w kroku {{ complexity_f.2 }}</p>
+      {% else %}
+        <p>{{ crop.name }} szkodzi {{ complexity_f.0.name }} w kroku {{ complexity_f.2 }}</p>
+      {% endif %}
     {% endif %}
   {% endif %}
 
