Dodane i podłączone zaczątki stron rodzina i gatunek

--- a/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
+++ b/crop_rotator/strona/templates/strona/plan_parts/crop_properties.html
@@ -30,9 +30,9 @@
   {% endif %}
 
 
-  <p><b>{{ crop.name }}  </b><button class="show_properties2" value="2">Info</button><p>
+  <p><b><a href="{% url 'crop' crop.id %}">{{ crop.name }}</a></b><button class="show_properties2" value="2">Info</button><p>
   <div class="hidden_properties">
-    <p>Rodzina: {{ crop.family }}</p>
+    <p>Rodzina: <a href="{% url 'family' crop.family.id %}">{{ crop.family }}</a></p>
     {% if crop.descr %}
      <p>Uwagi: {{ crop.descr }}
     {% endif %}
